RESOLVED FIXED190651
Regression(r236795) Check boxes are sometimes checked when they should not be
https://bugs.webkit.org/show_bug.cgi?id=190651
Summary Regression(r236795) Check boxes are sometimes checked when they should not be
Chris Dumez
Reported 2018-10-16 16:28:04 PDT
Check boxes are sometimes checked when they should not be after r236795 because the input's dirty checkedness flag is set to false when it should not: - https://html.spec.whatwg.org/#concept-input-checked-dirty-flag
Attachments
Patch (7.67 KB, patch)
2018-10-16 16:39 PDT, Chris Dumez
no flags
Patch (7.68 KB, patch)
2018-10-16 16:50 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2018-10-16 16:28:54 PDT
Chris Dumez
Comment 2 2018-10-16 16:39:57 PDT
Ryosuke Niwa
Comment 3 2018-10-16 16:47:14 PDT
Comment on attachment 352515 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=352515&action=review > LayoutTests/ChangeLog:12 > + * fast/dom/HTMLInputElement/checkbox-dirty-checkedness-flag-expected.txt: Added. > + * fast/dom/HTMLInputElement/checkbox-dirty-checkedness-flag.html: Added. Maybe we should add another test which sets the dirty checked flag true and mutates attributes if there is not a test like that already. > LayoutTests/fast/dom/HTMLInputElement/checkbox-dirty-checkedness-flag.html:7 > +description("Tests that setting the 'checked' attribute does not set its dirty checkedness flag."); say 'checked' content attribute to distinguish it from IDL attribute?
Chris Dumez
Comment 4 2018-10-16 16:50:16 PDT
WebKit Commit Bot
Comment 5 2018-10-16 17:28:03 PDT
Comment on attachment 352518 [details] Patch Clearing flags on attachment: 352518 Committed r237211: <https://trac.webkit.org/changeset/237211>
WebKit Commit Bot
Comment 6 2018-10-16 17:28:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.